--- a/assets/buttons/buttons.scss
+++ b/assets/buttons/buttons.scss
@@ -1,12 +1,100 @@
-.button{
-  background-color:blue;
-  height:40px;
-  width:80px;
-  border:1px solid black;
+body {
+	background-color: #4C4E53;
+	color: #fff;
+	font-family: Arial;
+}
 
-  &.round{
-    border-radius:50%;
-    width:40px;
-  }
+.row {
+	display: flex;
+	margin: 20px;
+}
 
+.button {
+    background-color: transparent;
+    height: 40px;
+    width: 80px;
+    display: inline-block;
+    margin: 0 10px;
+    box-sizing: border-box;
+
+    &.round {
+        width: 37.5px;
+        height: 37.5px;
+        border-radius: 50%;
+
+        &.disabled {
+            border: 4px solid #8B8054;
+            p {
+                color: 8B8054;
+            }
+        }
+	}
+
+    &.filled {
+    	background-color: #EBCE60;
+
+    	p{
+    		color: #4b4f53;
+    	}
+    }
+
+    &.unfilled {
+        background-color: unset;
+        border: 2px solid #EBCE60;
+    }
+
+    &.hover {
+    	background-color: #EED77B;
+
+    	p {
+    		color: #616675;
+    	}
+    }
+
+    &.click {
+    	background-color: #BCA54C;
+
+    	p {
+    		color: #4b4f53;
+    	}
+    }
+
+    &.inactive {
+    	background-color: #E0E3E8;
+
+    	p {
+    		color: #BEC0C9;
+    	}
+    }
+
+    p {
+        vertical-align: middle;
+        margin: auto;
+        text-align: center;
+        color: #EBCE60;
+        font-size: 30px;
+    }
+
+    &.long {
+    	width: 220px;
+    	height: 30px;
+    	border-radius: 20px;
+        display: table;
+
+        p {
+        	display: table;
+        	font-size: 12px;
+        	margin: auto;
+        	padding-top: 8px;
+        }
+
+        &.hover2 {
+            border: 2px solid #EBCE60;
+            background-color: #8B8054;
+
+            p {
+            	color: #EBCE60;
+            }
+        }
+    }
 }
