adding variables for button styles and making increment/decrement buttons working for 5min

--- a/assets/_base.scss
+++ b/assets/_base.scss
@@ -3,3 +3,14 @@
 * {
 	font-family: 'Nunito', sans-serif;
 }
+
+
+html, body {
+	font-size: 10px;
+}
+
+/*
+@media(retina){
+	font-size: 20px;
+}
+*/
