making calendar to generate dates

--- a/assets/calendar/calendar.scss
+++ b/assets/calendar/calendar.scss
@@ -7,6 +7,10 @@
     width: 100%;
     text-align: center;
   }
+
+  .grayedOut {
+  	color: lightgray;
+  }
   //TODO: Create a class ".grayedOut", which makes text lightgray
   //TODO: Add the lightgray color as a scss variable in the _variables.scss file and call it "fadedText"
 }
