started work on event handling for calendar view

--- a/assets/calendar/calendar.scss
+++ b/assets/calendar/calendar.scss
@@ -1,3 +1,5 @@
+@import '../main';
+
 #calendar-head,
 .calendar-row {
   display: flex;
@@ -6,6 +8,9 @@
   p {
     width: 100%;
     text-align: center;
+  }
+  .grayedOut {
+  	color: $fadedText;
   }
   //TODO: Create a class ".grayedOut", which makes text lightgray
   //TODO: Add the lightgray color as a scss variable in the _variables.scss file and call it "fadedText"
